comment input overflow fix

--- a/src/widgets/commentsSection/commentsSection.scss
+++ b/src/widgets/commentsSection/commentsSection.scss
@@ -48,6 +48,10 @@
         text-align: center;
         text-align: -webkit-center;
     }
+
+    > .comments__list > li:last-child{
+        padding-bottom: 80px;
+    }
 }
 
 .dark {
